# Intercoom

./: .gitignore  CMakeLists.txt  README.md
include/: AAuthenticator.hpp  ACallback.hpp  AudioManager.hpp  CMakeLists.txt  Callback.hpp  Dispatcher.hpp  MediaManager.hpp  VideoManager.hpp
src/: AAuthenticator.cpp  AdminAuthenticator.cpp  AdminAuthenticator.hpp  AudioManager.cpp  CMakeLists.txt  ClientAuthenticator.cpp  ClientAuthenticator.hpp  MediaManager.cpp  VideoManager.cpp
test/: AudioManagerTest.cpp  CMakeLists.txt  IntercoomTest.cpp  VideoManagerTest.cpp
